--- a/src/components/VideoList/VideoList.css
+++ b/src/components/VideoList/VideoList.css
@@ -65,4 +65,8 @@
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
+}
+.video-card__link {
+  text-decoration: none;
+  color: #323232;
 }/*# sourceMappingURL=VideoList.css.map */
