--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -26,6 +26,7 @@
     display: flex;
     height: 4.5rem;
     margin: 1rem 0;
+    cursor: pointer;
 
     @include tablet {
         margin-bottom: 1.5rem;
