fix header import and scss file

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -93,7 +93,7 @@
 
     &__button {
         @include default-button;
-        background-image: url('../../assets/images/upload.svg');
+        background-image: url('../../assets/Images/Upload-video-preview.jpg');
     }
 
 
