add axios and routers and do api calls

--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -119,6 +119,6 @@
 
     &__button {
         @include default-button;
-        background-image: url('../../assets/images/add_comment.svg');
+        background-image: url(../../assets/Icons/add_comment.svg);
     }
 }
