--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,7 @@
 @use '../../styles/partials/mixins' as *;
 
 .header {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
@@ -15,9 +15,8 @@
     }
 
     @include desktop {
-        padding: 2.4rem 9rem ;
+        padding: 2.4rem 9rem;
     }
-
 
     &__logo {
         height: 25px;
@@ -32,7 +31,15 @@
             align-items: center;
             width: 70%;
         }
+    }
 
+    &__search-container {
+        position: relative;
+        width: 100%;
+
+        @include tablet {
+            flex: 1;
+        }
     }
 
     &__search {
@@ -48,26 +55,37 @@
         border: 1px $secondary-divider solid;
         border-radius: 4px;
         background-color: $secondary-background;
-        
 
         &::placeholder {
             font-family: 'AvenirNext';
             font-weight: 600px;
             color: $primary-text-dark;
         }
+
         &:focus {
             background-image: none;
             outline: none;
             border: 2px solid $primary-cta;
         }
+    }
 
+    &__search-icon {
+        position: absolute;
+        left: 0.75rem;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 1rem;
+        height: 1rem;
+        background-image: url('../../assets/images/search.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     &__mobile-container {
         display: flex;
         width: 100%;
-
     }
+
     &__avatar {
         background-image: url(../../assets/Images/Mohan-muruge.jpg);
         background-size: cover;
@@ -94,5 +112,15 @@
     &__button {
         background-image: url('../../assets/Icons/upload.svg');
         @include default-button;
+    }
+
+    &__button-link {
+        color: inherit;
+        text-decoration: none;
+        &:hover,
+        &:focus {
+            color: inherit;
+            text-decoration: none;
+        }
     }
 }
