--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -34,24 +34,19 @@
     }
 
     &__search-container {
-        position: relative;
+        position:relative;
         width: 100%;
-
+        max-width: 400px; 
+        
         @include tablet {
             flex: 1;
+            max-width: 400px;
         }
     }
 
     &__search {
-        min-height: 40px;
-        margin: 1rem 1rem 1rem 0;
-        background-image: url('../../assets/images/search.svg');
-        background-size: 1rem;
-        background-position-x: 0.5rem;
-        background-position-y: center;
-        background-repeat: no-repeat;
         width: 100%;
-        padding: 0 2rem;
+        padding: 0.5rem 0.5rem 0.5rem 2.5rem;
         border: 1px $secondary-divider solid;
         border-radius: 4px;
         background-color: $secondary-background;
@@ -63,7 +58,6 @@
         }
 
         &:focus {
-            background-image: none;
             outline: none;
             border: 2px solid $primary-cta;
         }
@@ -76,7 +70,7 @@
         transform: translateY(-50%);
         width: 1rem;
         height: 1rem;
-        background-image: url('../../assets/images/search.svg');
+        background-image: url('../../assets/Icons/search.svg');
         background-size: contain;
         background-repeat: no-repeat;
     }
@@ -117,6 +111,7 @@
     &__button-link {
         color: inherit;
         text-decoration: none;
+
         &:hover,
         &:focus {
             color: inherit;
