fix mobile and tablet view of videoList

--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -3,7 +3,7 @@
 
 .video-list {
     margin: 0 1rem 1rem 1rem;
-    float: right;
+    float: left;
     margin-left: 20px;
 
     @include tablet {
